<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="rtl"
    android:padding="@dimen/fab_margin">

    <EditText
        android:id="@+id/login_et_user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:inputType="textEmailAddress"
        android:hint="@string/login_et_user_name"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/login_et_password"/>

    <CheckBox
        android:id="@+id/login_cb_save_me"
        android:text="مرا به خاطر بسپار"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height" />

    <Button
        android:id="@+id/login_bt_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/login_bt_enter"
        android:onClick="loginClick"/>
</LinearLayout>