<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layoutDirection="rtl">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:layoutDirection="rtl">
        <!--todo edit all limits-->

            <ImageButton
                android:layout_width="@dimen/image_view_create_activity"
                android:layout_height="@dimen/image_view_create_activity"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/create_class_imb_class_image"
                />
            <EditText
                android:id="@+id/create_class_ed_class_name"
                android:layout_height="@dimen/edit_text_height"
                android:layout_width="0dp"
                app:layout_constraintRight_toLeftOf="@+id/create_class_imb_class_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/create_class_imb_class_image"
                android:layout_margin="8dp"
                android:hint="@string/request_class_classname"
                android:maxLines="1" />

            <TextView
                android:id="@+id/create_class_tv_subject_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_class_subject_label"
                android:layout_marginRight="32dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@+id/create_class_imb_class_image" />

            <Spinner
                android:id="@+id/create_class_sp_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fab_margin"

                app:layout_constraintBottom_toBottomOf="@+id/create_class_tv_subject_label"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/create_class_tv_subject_label"
                app:layout_constraintTop_toTopOf="@+id/create_class_tv_subject_label" />

            <TextView
                android:id="@+id/create_class_tv_capacity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fields_space_create_class"
                android:text="@string/create_class_capacity"
                app:layout_constraintTop_toBottomOf="@+id/create_class_tv_subject_label"
                app:layout_constraintLeft_toLeftOf="@+id/create_class_tv_subject_label" />

            <EditText
                android:id="@+id/create_class_ed_capacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberDecimal"
                android:maxLines="1"
                app:layout_constraintRight_toLeftOf="@+id/create_class_tv_capacity_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/create_class_tv_capacity_label"
                app:layout_constraintBottom_toBottomOf="@+id/create_class_tv_capacity_label"
                android:layout_marginRight="@dimen/fab_margin"
                />
            <TextView
                android:id="@+id/create_class_tv_cost_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fields_space_create_class"
                android:text="@string/create_class_cast"
                app:layout_constraintTop_toBottomOf="@id/create_class_tv_capacity_label"
                app:layout_constraintLeft_toLeftOf="@id/create_class_tv_capacity_label" />

            <EditText
                android:id="@+id/create_class_ed_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                app:layout_constraintRight_toLeftOf="@+id/create_class_tv_cost_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/create_class_tv_cost_label"
                app:layout_constraintBottom_toBottomOf="@+id/create_class_tv_cost_label"
                android:layout_marginRight="@dimen/fab_margin"
                />

            <TextView
                android:id="@+id/create_class_tv_start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fields_space_create_class"
                android:text="@string/create_class_start_date"
                app:layout_constraintTop_toBottomOf="@id/create_class_tv_cost_label"
                app:layout_constraintLeft_toLeftOf="@id/create_class_tv_cost_label" />

            <TextView
                android:id="@+id/create_class_tv_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toLeftOf="@+id/create_class_tv_start_date_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/create_class_tv_start_date_label"
                app:layout_constraintBottom_toBottomOf="@+id/create_class_tv_start_date_label"
                android:layout_marginRight="@dimen/fab_margin"
                android:onClick="clickSetDate"
                android:textAlignment="center"
                tools:text="2017/9/25"
                />

            <TextView
                android:id="@+id/create_class_tv_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fields_space_create_class"
                android:text="@string/create_class_count_label"
                app:layout_constraintTop_toBottomOf="@+id/create_class_tv_start_date_label"
                app:layout_constraintLeft_toLeftOf="@+id/create_class_tv_start_date_label" />

            <EditText
                android:id="@+id/create_class_ed_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                app:layout_constraintRight_toLeftOf="@+id/create_class_tv_count_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/create_class_tv_count_label"
                app:layout_constraintBottom_toBottomOf="@+id/create_class_tv_count_label"
                android:layout_marginRight="@dimen/fab_margin"
                />


            <TextView
                android:id="@+id/create_class_tv_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_class_description"
                android:layout_marginTop="@dimen/fields_space_create_class"
                app:layout_constraintTop_toBottomOf="@+id/create_class_tv_count_label"
                app:layout_constraintLeft_toLeftOf="@+id/create_class_tv_count_label" />

            <EditText
                android:id="@+id/create_class_ed_description"
                android:layout_width="0dp"
                android:layout_height="@dimen/description_height_create_class"
                android:ems="10"
                android:inputType="textMultiLine"
                app:layout_constraintRight_toLeftOf="@+id/create_class_tv_description_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/create_class_tv_description_label"
                android:layout_marginRight="@dimen/fab_margin"/>
            <!--todo add limits-->
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
